--- a/donde.html
+++ b/donde.html
@@ -6,7 +6,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	    <meta name="keywords" content="TaeKwonDo en Córdoba, TKD Córdoba Capital donde practicar, TKD ITF CBA donde, dojangs en Córdoba">
 	    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	    <link rel="stylesheet" type="text/css" href="CSS/proyectofinal.css">
+    	<link rel="stylesheet" type="text/css" href="css/proyectofinal.css">
 	    <link rel="preconnect" href="https://fonts.gstatic.com">
 	    <link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
 	    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
