Comienzo nuevo fondo y paleta

--- a/taeKwonDo.html
+++ b/taeKwonDo.html
@@ -33,6 +33,9 @@
         <p>Tae significa "acción de pierna o patada", Kwon significa "acción de mano o golpe", Do significa "camino espiritual". Es por medio del Tae Kwon-Do que buscamos entonces cultivar cuerpos fuertes, mentes sanas, y espíritus indómitos para enfrentar las adversidades dentro y fuera del dojang.</p>
     </div>
     <div>
+        <p></p>
+    </div>
+    <div>
         <div class="container imagenChoi"><img src="generalChoi.jpg" alt="General Choi Hong Hi"></div>
         <div class="container"><p>General Choi Hong Hi, fundador del Tae Kwon-Do</p></div>
     </div>
