Nuevas adiciones al fondo, terminar Informacion y Landing

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p>En la sección <strong>"Estudiantes"</strong> verás una <strong>ficha médica</strong>, es obligatorio que la llenes y la firmes.</p>
+                    <p>En la sección <a href="estudiantes.html" target="blank">"Estudiantes"</a> verás una <strong>ficha médica</strong>, es obligatorio que la llenes y la firmes.</p>
 
                     <p>También es necesario que asistas a clase con<strong>ropa deportiva</strong> y con uniformes avalados por la institución.</p>
 
@@ -237,7 +237,7 @@
         <a class="nav-link" href="contacto.html" >Contacto</a>
         <a class="nav-link" href="https://www.facebook.com/C%C3%B3rdoba-TaekwonDo-ITF-1788817928052486" target="blank">Facebook</a>
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Instagram</a><!--Inhabilitado hasta que hagamos una o salga algo.-->
- 
+        <div> <p>Powered by <a href="https://github.com/Pulisich" target="_blank">PULISICH</a></p></div>
     </nav>
   </div>
     
