Nueva infopage, falta estudiantes, espacios, contacto, y Landing

--- a/donde.html
+++ b/donde.html
@@ -1,3 +1,4 @@
+<!--REFORMULAR PÁGINA ENTERA: HACER DIVS POR CADA ESCUELA, COLOCAR EN CADA DIV UN IFRAME DE LA UBICACIÓN, Y UNA FOTO DE LOS INSTRUCTORES A CARGO, ASÍ COMO SU ESPECIALIDAD.-->
 <!DOCTYPE html>
 <html>
 
