--- a/estudiantes.html
+++ b/estudiantes.html
@@ -1,3 +1,4 @@
+<!--REFORMULAR LA PÁGINA ENTERA, DIVIDIR EN SECCIONES CON IFRAMES: REQUISITOS, LUCHA, VIDEOS DE LOS TULES, ROTURA, CÓDIGO DE CONDUCTA CON LOS PRINCIPIOS, Y LEGALES.-->
 <!DOCTYPE html>
 <html>
 <head>
