--- a/sobre.html
+++ b/sobre.html
@@ -29,6 +29,12 @@
         <h2 class="subtitulos">¿Dónde puedo practicar?</h2>
         <p>Toda la informaciónsobre los lugares se puede encontrar en la sección <a href="donde.html" target="_top"> ESPACIOS</a> </p>
     </div>
-    <div></div>
+    <div>
+        <h2 class="subtitulos">¿Cómo se compone la escuela?</h2>
+        <p> Nuestra escuela se compone de varios dojanes donde instructores y maestros enseñan el Tae Kwon-Do, nuestra máxima autoridad es Sabonim Maximiliano Pedrotti, de rango V DAN, director y fundador de la Córdoba Tae Kwon-Do ITF.</p>
+        <img src="" alt="Sabonim Maximiliano Pedrotti">
+        <p>Sabonim, Maximiliano Pedrotti</p>
+        <p>En la sección <a href="donde.html"> ESPACIOS</a> hallarás más información acerca de los dojanes de la escuela y los instructores a cargo, así como sus especialidades.</p>
+    </div>
 </body>
 </html>
