Iframes arreglados, faltan imágenes y nuevo landing

--- a/instructores.html
+++ b/instructores.html
@@ -60,20 +60,26 @@
 	    </div>
 
 	
+	<div>
+		<h1 id="tituloDanes">Instructores.</h1>
 
-	<h1 id="tituloDanes">Instructores.</h1>
+		<h3 id="tituloDanesII">Ésta sección es exclusiva para <strong>INSTRUCTORES</strong> reconocidos por la escuela.</h3>
+	</div>
+	<div>
+		<form action="recibe.html" method="POST" enctype="multipart/form-data"> 
 
-	<h3 id="tituloDanesII">Ésta sección es exclusiva para <strong>INSTRUCTORES</strong> reconocidos por la escuela.</h3>
-
-	<form action="recibe.html" method="POST" enctype="multipart/form-data"> <!--Ver comentario en Contacto.html-->
-
-		<p>Usuario:</p>
-			<input type="text" name="Usuario"> 
-		<br>
-		<p>Contraseña:</p>		
-			<input type="password" name="Contraseña"> <!--No vimos qué pasaba después de ingresar datos a un formulario, a dónde se manda y todo eso, pero cuando me enseñen el usuario acá entraría a una página exclusiva para instructores.-->
-	</form>
+			<p>Usuario:</p>
+				<input type="text" name="Usuario"> 
+			<br>
+			<p>Contraseña:</p>		
+				<input type="password" name="Contraseña"> <!--No vimos qué pasaba después de ingresar datos a un formulario, a dónde se manda y todo eso, pero cuando me enseñen el usuario acá entraría a una página exclusiva para instructores.-->
+		</form>
+	</div>
 	
+	<div>
+		<p><a href="contacto.html">Deshonrosamente declaro haber olvidado mi contraseña.</a></p>
+	</div>
+
 	<div>
 
 	    <nav class="nav nuevoFooterDanes">
