--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <div>
     <nav class="nav nuevoFooter">
 
-        <a class="nav-link active nuevoFooter"  href="#">Nuestras redes:</a>
+        <a class="nav-link active nuevoFooter"  href="#">Arriba</a>
         <a class="nav-link" href="contacto.html" >Contacto</a>
         <a class="nav-link" href="https://www.facebook.com/C%C3%B3rdoba-TaekwonDo-ITF-1788817928052486" target="blank">Facebook</a>
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Instagram</a><!--Inhabilitado hasta que hagamos una o salga algo.-->
