Tablas arregladas, falta responsive

--- a/contacto.html
+++ b/contacto.html
@@ -84,11 +84,12 @@
 				
 					<p> Asunto:</p>
 							<select name="Asunto">
-								<option value="Horarios">Horarios.</option>
-								<option value="Equipo">Equipo.</option>
-								<option value="Ubicaciones">Ubicaciones.</option>
-								<option value="Tarifas">Tarifas.</option>
-								<option value="Otros">Otros.</option>
+								<option value="contrasenia">Contraseña</option>
+								<option value="horarios">Horarios.</option>
+								<option value="equipo">Equipo.</option>
+								<option value="ubicaciones">Ubicaciones.</option>
+								<option value="tarifas">Tarifas.</option>
+								<option value="otros">Otros.</option>
 							</select>
 					<br>
 				
