Imágenes agregadas, todo optimizado, falta alinear botones modales

--- a/dobok.html
+++ b/dobok.html
@@ -19,6 +19,10 @@
     <div>
         <h1 class="nosotros">Sobre el Dobok y los Cinturones</h1>
     </div>
+    <div class="container imagenChoi">
+        <img src="dobok.png" alt="Dobok">
+        <span><p>Dobok Oficial reglamentado por la ITF.</p></span>
+    </div>
     <div class="textoIframe">
         <p> El dobok es el uniforme de todos los practicantes de Tae Kwon-Do alrededor del mundo.</p>
 
@@ -27,29 +31,33 @@
     <div>
         <p>Los cinturones son nuestra forma de distinguir nuestro nivel tanto de antigüedad como de técnica, cada color simboliza un nivel determinado y se asocia a un determinado tiempo de práctica.</p>
         <p>El escalafón o escala de rangos es el siguiente: </p>
-        <ol class="oLista">
-            <li class="cintoBlanco">Cinturón Blanco o 10°GUB</li>
-            <li class="cintoAmarillo">Cinturón Amarillo u 8°GUB</li>
-            <li class="cintoVerde">Cinturón Verde o 6°GUB</li>
-            <li class="cintoAzul">Cinturón Azul o 4°GUB</li>
-            <li class="cintoRojo">Cinturón Rojo o 2°GUB</li>
-            <li class="cintoNegro">Instructores de I a IIIDAN denominados Bu-Sabonim o Sabon</li>
-            <li class="cintoNegroII">Instructores de IV a VIDAN denominados Sabonim</li>
-            <li class="cintoNegroIII">Maestros de VII a VIIIDAN denominados Sagionin y Sonin-Sagionin</li>
-            <li class="sasonim">Gran Maestros de máximo rango XIXDAN denominados Sasonim.</li>
-        </ol>
+        <div class="container">
+            <ol class="oListaCintos">
+                <li class="cintoBlanco">Cinturón Blanco o 10°GUB</li>
+                <li class="cintoAmarillo">Cinturón Amarillo u 8°GUB</li>
+                <li class="cintoVerde">Cinturón Verde o 6°GUB</li>
+                <li class="cintoAzul">Cinturón Azul o 4°GUB</li>
+                <li class="cintoRojo">Cinturón Rojo o 2°GUB</li>
+                <li class="cintoNegro">Instructores de I a IIIDAN denominados Bu-Sabonim o Sabon</li>
+                <li class="cintoNegroII">Instructores de IV a VIDAN denominados Sabonim</li>
+                <li class="cintoNegroIII">Maestros de VII a VIIIDAN denominados Sagionin y Sonin-Sagionin</li>
+                <li class="sasonim">Gran Maestros de máximo rango XIXDAN denominados Sasonim.</li>
+            </ol>
+        </div>
     </div>
     <div>
         <h2 class="subtitulos">Las Puntas</h2>
         <p> Probablemente habrás notado que de cinturón en cinturón hay dos rangos de diferencia excepto a partir de cinturón negro.</p>
         <p> Eso es porque entre cada categoría de gubes hay categorías intermedias que se distinguen con puntas del cinturón siguiente sobre el cuerpo del cinturón actual:</p>
-        <ul class="uLista">
-            <li class="cintoBlanco">Cinturón Alanco <strong class="cintoAmarillo">puntas amarillas o 9°GUB</strong></li>
-            <li class="cintoAmarillo">Cinturón Amarillo <strong class="cintoVerde">puntas verdes o 7°GUB</strong></li>
-            <li class="cintoVerde">Cinturón Verde <strong class="cintoAzul">puntas azules o 5°GUB</strong></li>
-            <li class="cintoAzul">Cinturón Azul <strong class="cintoRojo"> puntas rojas o 3°GUB</strong></li>
-            <li class="cintoRojo">Cinturón rojo <strong class="cintoNegro">puntas negras o 1°GUB</strong></li>
-        </ul>
+           <div class="container">  
+               <ul class="uListaCintos">
+                    <li class="cintoAmarillo">Cinturón Alanco <strong class="cintoBlanco">puntas amarillas</strong> o 9°GUB </li>
+                    <li class="cintoVerde">Cinturón Amarillo <strong class="cintoAmarillo">puntas verdes</strong> o 7°GUB</li>
+                    <li class="cintoAzul">Cinturón Verde <strong class="cintoVerde">puntas azules </strong>o 5°GUB</li>
+                    <li class="cintoRojo">Cinturón Azul <strong class="cintoAzul"> puntas rojas</strong> o 3°GUB</li>
+                    <li class="cintoNegro">Cinturón rojo <strong class="cintoRojo">puntas negras </strong>o 1°GUB</li>
+                </ul>
+        </div>
     </div>
     <div>
         <h2 class="subtitulos">¿Por qué las puntas?</h2>
