--- a/instructores.html
+++ b/instructores.html
@@ -19,9 +19,8 @@
 
 </head>
 
-<body id="cinturonNegro">
+<body class="cinturonNegro">
 
-	<div> 	
 		<div>
 				
 			<div class="container-fluid">
@@ -56,55 +55,56 @@
 		                  </li>
 		                </ul>
 		             </div>
-	        	</nav>
-	    </div>
-
+					</nav>	
+				</nav>
+	   		 </div>
+		</div>
 	
-	<div>
-		<h1 id="tituloDanes">Instructores.</h1>
+		<div>
+			<h1 id="tituloDanes">Instructores.</h1>
 
-		<h3 id="tituloDanesII">Ésta sección es exclusiva para <strong>INSTRUCTORES</strong> reconocidos por la escuela.</h3>
-	</div>
-	<div>
-		<form action="recibe.html" method="POST" enctype="multipart/form-data"> 
+			<h3 id="tituloDanesII">Ésta sección es exclusiva para <strong>INSTRUCTORES</strong> registrados en la escuela.</h3>
 
-			<p>Usuario:</p>
-				<input type="text" name="Usuario"> 
-			<br>
-			<p>Contraseña:</p>		
-				<input type="password" name="Contraseña"> <!--No vimos qué pasaba después de ingresar datos a un formulario, a dónde se manda y todo eso, pero cuando me enseñen el usuario acá entraría a una página exclusiva para instructores.-->
-		</form>
-	</div>
+		</div>
+		
+		<div>
+			<form action="recibe.html" method="POST" enctype="multipart/form-data"> 
+
+				<p>Usuario:</p>
+					<input type="text" name="Usuario"> 
+				<br>
+				<p>Contraseña:</p>		
+					<input type="password" name="Contraseña"> <!--No vimos qué pasaba después de ingresar datos a un formulario, a dónde se manda y todo eso, pero cuando me enseñen el usuario acá entraría a una página exclusiva para instructores.-->
+			</form>
+		</div>
 	
-	<div>
-		<p><a href="contacto.html">Deshonrosamente declaro haber olvidado mi contraseña.</a></p>
-	</div>
+		<div>
+			<p><a href="contacto.html">Deshonrosamente declaro haber olvidado mi contraseña.</a></p>
+		</div>
 
-	<div>
+		<div class="footerDanes">
+			<footer>
+			<nav class=" nuevoFooter">
+			
+					<a class="nav-link active nuevoFooter"  href="#">Arriba</a>
+					<a class="nav-link" href="contacto.html" >Contacto</a>
+					<a class="nav-link" href="https://www.facebook.com/C%C3%B3rdoba-TaekwonDo-ITF-1788817928052486" target="blank">Facebook</a>
+					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Instagram</a><!--Inhabilitado hasta que hagamos una o salga algo.-->
+					
+			
+				</nav>
+	
+				<div class="nuevoFooter"> 
+					<p>Developed by <a href="https://github.com/Pulisich" target="_blank">PULISICH</a></p>
+				</div>
+			</footer>
+		</div>
 
-	    <nav class="nav nuevoFooterDanes">
-
-	        <a class="nav-link active nuevoFooter"  href="#">Nuestras redes:</a>
-	        <a class="nav-link" href="contacto.html" >Contacto</a>
-	        <a class="nav-link" href="https://www.facebook.com/C%C3%B3rdoba-TaekwonDo-ITF-1788817928052486" target="blank">Facebook</a>
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Instagram</a><!--Ponerle para que salga una ventana de texto-->
-
-	 
-	    </nav>
-  	
-  	</div>
-
-  	 <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+  
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+   
 
 </body>
 
