--- a/legales.html
+++ b/legales.html
@@ -61,12 +61,13 @@
 				<button class="iconoFacebook"><a href="https://www.facebook.com/C%C3%B3rdoba-TaekwonDo-ITF-1788817928052486" target="blank" class="iconoFacebook"><i class="fa fa-facebook"></i></a></button>
 		</div>
 
-		<br>
-		<br>
+		<div>
 
-		<h1 class="nosotros">Formulario legal.</h1>
-
-			<p>Por la presente doy por entendido que:</p>
+			<h1 class="nosotros">Formulario legal.</h1>
+		
+		</div>
+		<div>	
+		<p>Por la presente doy por entendido que:</p>
 			
 			<form  id="checkBoxLegales">
 
@@ -142,7 +143,7 @@
 
 			</form>
 	</div>
-
+</div>
 
 	<div class="footerContactos">
 		<footer>
