Commit final cierro

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                <img src="1.png" class="informacionImg" alt="Información">
                   <div class="overlay">
                      <div class="contenidOverlay">
-                        <a href="index.html"><span>Información</span></a>
+                        <a href="info.html"><span>Información</span></a>
                      </div>
                   </div>
                </div>
