--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>Somos Córdoba Tae Kwon-Do ITF, somos una escuela que se especializa en el desarrollo marcial, deportiva, personal, mental, y espiritual de todos aquellos interesados en practicar Tae Kwon-Do</p>
 
          
-            <p>Nuestra misión consiste en formar taekwondistas para que puedan deselvolverse en su ámbito de preferencia.</p>
+            <p>Nuestra misión consiste en formar taekwondistas para que puedan desenlvolverse en su ámbito de preferencia.</p>
 
          
             <p>Ya sea competitivamente, laboralmente como instructores, o sencillamente de forma recreativa, Córdoba Tae Kwon-Do ITF abre sus puertas a aquellos dispuestos a aprender de nuestros maestros e instructores.</p>
