--- a/contacto.html
+++ b/contacto.html
@@ -33,8 +33,8 @@
 			   <div class="collapse navbar-collapse" id="navbarNav">
 				   
 					<ul class="navbar-nav">
-						<li class="nav-item active">
-						  <a class="nav-link" href="info.html">Información<span class="sr-only">(current)</span></a>
+						<li class="nav-item">
+						  <a class="nav-link" href="info.html">Información</a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link" href="estudiantes.html">Estudiantes</a>
@@ -45,8 +45,8 @@
 						<li class="nav-item">
 						  <a class="nav-link" href="donde.html">Espacios</a>
 						</li>
-						<li class="nav-item">
-						  <a class="nav-link" href="contacto.html">Contacto</a>
+						<li class="nav-item active">
+						  <a class="nav-link" href="contacto.html">Contacto<span class="sr-only">(current)</span></a>
 						</li>
 					  </ul>
 			  
