Fix de contenido

--- a/instructores.html
+++ b/instructores.html
@@ -169,7 +169,7 @@
 		<div>
 			<p class="underTitulos">
 				<a href="contacto.html">
-					Deshonrosamente declaro haber olvidado mi contraseña.
+					¡Olvidé mi contraseña!
 				</a>
 			</p>
 		</div>
