Imágenes en orden

--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@
     <div>
         <h2 class="subtitulos">¿Qué es la ITF?</h2>
         <div class="container imagenChoi">
-            <img src="itfLogo.png" alt="Logo ITF">
+            <img src="img/itfLogo.png" alt="Logo ITF">
             <p>Logo International Tae Kwon-Do Federation</p>
         </div>
         
@@ -41,7 +41,7 @@
         <h2 class="subtitulos">¿Cómo se compone la escuela?</h2>
         <p> Nuestra escuela se compone de varios dojanes donde instructores y maestros enseñan el Tae Kwon-Do, nuestra máxima autoridad es Sabonim Maximiliano Pedrotti, de rango V DAN, director y fundador de la Córdoba Tae Kwon-Do ITF.</p>
         <div class=" container imagenChoi">
-            <img src="maxi.png" alt="Sabonim Maximiliano Pedrotti">
+            <img src="img/maxi.png" alt="Sabonim Maximiliano Pedrotti">
             <p>Sabonim, Maximiliano Pedrotti</p>
         </div>
         
