--- a/taeKwonDo.html
+++ b/taeKwonDo.html
@@ -35,7 +35,7 @@
         
     </div>
     <div>
-        <div class="container imagenChoi"><img src="generalChoi.jpg" alt="General Choi Hong Hi"></div>
+        <div class="container imagenChoi"><img src="img/generalChoi.jpg" alt="General Choi Hong Hi"></div>
         <div class="container"><p>General Choi Hong Hi, fundador del Tae Kwon-Do</p></div>
         <p>El Tae Kwon-Do es más que un deporte de contacto o un arte marcial, implica también una filosofía y un modo de vivir apuntado a la honradez y la virtud. Todos sus practicantes se adhieren a los principios del mismo.</p>
         <p>Para saber más sobre los principios, haz click <a href="estudiantes.html" target="top">AQUÍ</a></p>
