--- a/dobok.html
+++ b/dobok.html
@@ -18,7 +18,7 @@
         <h1 class="nosotros">Sobre el Dobok y los Cinturones</h1>
     </div>
     <div class="container imagenChoi">
-        <img src="dobok.png" alt="Dobok">
+        <img src="img/dobok.png" alt="Dobok">
         <span><p>Dobok Oficial reglamentado por la ITF.</p></span>
     </div>
     <div class="textoIframe">
